[package]
name = "conpty-perf-test"
version = "0.1.0"
edition = "2024"

[dependencies]
strum = "0.28.0"
strum_macros = "0.28.0"
clap = { version = "4.6.0", features = ["derive"] }
winpty-rs = { path = "../winpty-rs", features = ["conpty"]}
pathsearch = "0.2.0"
serde_json = "1.0"
serde = { version = "1.0.228", features = ["serde_derive"]}
serde_derive = "1.0.228"
